--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less-loader": "^5.0.0",
+    "node-less": "^1.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vux": "^2.9.4"
+    "vux": "^2.9.4",
+    "vux-loader": "^1.2.9",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
